# virtuaid-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  pyproject.toml  requirements.txt  schema.yml  serve.sh
.github/workflows/: deploy-backend.yml
analysis/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
analysis/cnn/: emotion-detection-cnn.ipynb  model_loader.py  test.py  tf_check.py
analysis/migrations/: 0001_initial.py  0002_initial.py  0003_video_therapy_session.py  0004_video_status_emotionanalysissummary_emotionanalysis.py  0005_emotionanalysissummary_emotion_counts_and_more.py
analysis/utils/: emotion_detector.py
api/: urls.py
associates/: serializers.py  urls.py  views.py
associates/migrations/: 0001_initial.py  0002_alter_associates_created_by.py
authentication/: models.py  permissions.py  serializers.py  test_utils.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_interfaceuser_avatar_interfaceuser_username.py
backend/: celery.py  settings.py
carehome_managers/: apps.py  models.py  serializers.py  views.py
carehome_managers/migrations/: 0001_initial.py
carehomemanagers/: apps.py  serializers.py  urls.py  views.py
carehomes/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
feedbacks/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
reports/: filters.py  models.py  serializers.py  urls.py  views.py
residents/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
sessions/: models.py
therapy_sessions/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
(+10 files in other folders)
